# kinematics_from_description

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py
.github/workflows/: ci.yaml
config/: config.yaml
scripts/: mr_desc_param  mr_desc_param.py
src/kinematics_from_description/: __init__.py  kfd.py
test/: test_kinematics_from_description.py  test_robot.urdf
